--- a/Mathematic-for-Data-science/2. Matrix decompositions.md
+++ b/Mathematic-for-Data-science/2. Matrix decompositions.md
@@ -69,7 +69,6 @@ THEOREM
   
   - **Rank가 1이다?** : 행렬의 일차독립인 행 또는 열의 최대 개수가 1이다. 행렬의 피봇의 개수가 1이다. 행렬의 열벡터들에 의해 생성된 벡터공간의 차원이다.
     - 
-  
   - $f(x,y,s) = \vert \vert A - s\text{x}\text{y}^T\vert\vert ^2 _F$
   - $\text{x} \in \R^m, \text{y} \in \R^n, \vert\vert \text{x} \vert \vert _2= \vert\vert \text{y} \vert \vert _2 =1, s > 0$
   
@@ -117,9 +116,27 @@ THEOREM
   - $A = UDV^T, A^TA = VD^2V^T$
   - $\text{tr}(A^TA) = \text{tr}(VD^2V^T) = \text{tr}(D^2)$
 
+### Nuclear Norms
+
+DEFINITIONS
+
+- A의 nuclear norm은 A의 모든 특이값들의 합이며, $||A||_*$로 표현된다.
+
 ### Nonnegative definite matrices
 
+- A가 대칭행렬이라면 $\Sigma_i d_j v_j v_j^T$로 표기할 수 있다.
 
+- $d_j$가 non-negative하다면, $\text{x}^T A \text{x} = \Sigma_j d_j |\text{x}^T v_j|^2 \geq 0$
+
+**THEOREM**
+
+- $\R^{n \times n}$에 속하는 대칭행렬 A가 있을 때, A가 non-negative라면 아래 조건들을 만족한다.
+  - $A \geq 0$이라고 표기하며, $\R^n$에 속하는 모든 $\text{x}$ 에 대해서 $\text{x}^T A \text{x} \geq$ 를 만족한다.
+  - A의 모든 고유값들은 non-negative이다.
+  - 어떤 B에 대해서 $A = B^TB$
+    - $\text{x}^T A \text{x} = \text{x}^T B^T B \text{x} \geq 0$
+  - A는 random vector의 공분산 행렬이다.
+    - $\text{Var}(X) = A$라고 하면, $\text{Var}(\text{y}^T \text{x}) = \text{y}^T \text{Var}(\text{x}) \text{y}$ (상수는 제곱되어 나오므로.)
 
 ### Positive definite matrices
 
@@ -127,11 +144,32 @@ THEOREM
 
 ### Square root of a matrix
 
+**EXAMPLE**
 
+- 대칭이고 non-negative한 행렬 $\Sigma$가 있을 때, 어떻게 하면 $\Sigma ^{1/2}$를 찾을 수 있을까?
+  - $\Sigma = VDV^T$
+  - $\Sigma ^{1/2} = V D^{1/2}V^T$
+  - $\Sigma^{1/2} \Sigma^{1/2} = VDV^T = \Sigma$
+  - $D= \begin{bmatrix} d_1, ...,... \\...,...,... \\...,...,d_p\end{bmatrix}, D^{1/2} = \begin{bmatrix} \sqrt{d_1}, ...,... \\...,...,... \\...,...,\sqrt{d_p} \end{bmatrix}$
+- 다변량 정규분포 $\mathcal{N}(0, \Sigma)$로부터 샘플을 어떻게 생성할 수 있을까?
+  - $z = (z_1, z_2, .., z_n)^T \sim \mathcal{N}(0, I_n)$
+  - $z_i \sim \mathcal{N}(0,1)$
+  - $\text{Var}(\Sigma^{1/2} z) = \Sigma^{1/2} I \ \Sigma^{1/2} \Sigma$라 할 수 있으므로 $\Sigma^{1/2} z \sim \mathcal{N}(0, \Sigma)$
 
 ### Convex quadratic function
 
+**DEFINITION**
 
+- $\R^n$에 속하는 모든 x,y에 대해서 $0 \leq \lambda \leq 1$이라고 할 때, 아래 조건을 만족하면 함수 f는 볼록하다.
+  - $f(\lambda x + (1-\lambda)y) \leq \lambda f(x) + (1-\lambda)f(y)$
+
+**THEOREM**
+
+- 
+
+
+
+<img src="./img\image-20230913205544249.png" alt="image-20230913205544249" style="zoom:50%;" />
 
 ### Log determinant function
 
