--- a/Mathematic-for-Data-science/2. Matrix decompositions.md
+++ b/Mathematic-for-Data-science/2. Matrix decompositions.md
@@ -177,5 +177,11 @@ DEFINITIONS
 
 ### MLE for the normal variance model
 
-
+- $x_1, .., x_n \sim \mathcal{N}(0, \Theta ^{-1})$이라 가정.
+- 음의 로그우도함수는 다음과 같음.
+  - $\log{\Theta} = -\log{\text{det}(\Theta)} + \text{tr}(S \Theta) + \text{const}, S = n^{-1}\Sigma{x_i x_i^T}$
+    - $P_{\Theta}(\text{x}) = (2 \pi)^{-p/2} |\Sigma|^{-1/2} \text{exp}(-\frac{1}{2}\text{x}^T \Sigma^{-1} \text{x})$
+    - $\log{P_{\Theta}(\text{x})} = \text{const} + \frac{n}{2}\log{\text{det}(\Theta)} - \frac{n}{2}\frac{\Sigma x_i^T \theta x_i}{n}$
+      $= \text{const} + \frac{n}{2}\log{\text{det}(\Theta)} - \frac{n}{2}\text{tr}(S \Theta)$ 
+  - $S$는 
 
