--- a/Dynamic-Programing/03. Shortest Path Problem and Other Applications.md
+++ b/Dynamic-Programing/03. Shortest Path Problem and Other Applications.md
@@ -26,3 +26,74 @@ Directed network
 
 ### Capacity Expansion
 
+
+
+### Production Control
+
+- 목적
+  - 최소 총 비용으로 수요를 충족시키기 위해 다기간 계획 기간에 걸쳐 생산을 계획함.
+- 설명
+  - 단일 제품에 대한 수요는 시점 1부터 N-1까지 번호가 매겨진 N-1시간동안 연속적으로 발생함.
+  - 특정 기간 동안 발생하는 수요는 해당 기간 또는 이전 기간 동안의 생산으로 충족될 수 있음 (재고는 이월되지만 백로그는 없음.)
+  - 수요는 사전에 알 수 있음.
+  - $t=1$ 시점에 재고는 0임.
+  - $t=N$ 시점에 재고는 0이어야 함.
+  - $t$ 기간 동안 $x$개의 제품을 생산하는데 드는 비용함수는 $c_t(x)$임.
+  - $t$기간 동안 $y$단위의 재고를 보유하는데 드는 비용함수는  $h_t(y)$임.
+- 결정 (action)
+  - $t$시점 시작 시, 기간동안의  생산량 $x_t$와 재고 $I_t$가 결정됨.
+- Mathematical programming 
+  - $\min \Sigma^{N-1}_{t=1} \{c_t(x_t) + h_t(I_t)\}, \text{s.t.} \ I_1 = I_N = 0$
+    - $I_t + x_t=d_t + I_{t+1}, \ \forall t = 1,..,N-1$
+    - $x_t \geq 0, \ \forall t = 1,.. , N-1$
+    - $I_t \geq 0, \ \forall t = 2,..,N-1$
+- DP 공식 (위 내용들을 DP에 맞게 모델링하기)
+  - $N-1$ 기간 동안, 시스템 운영비용은 의사결정시점시 재고 $I_t$에 따라 달라지지만, 이전 재고 및 이전 생산 수준에 따라서는 달라지지 않음.
+    - 이러한 조건은 DP가 적용가능하다는 것을 의미함.
+  - 의사결정 시점에서의 재고가 $I_t$인 경우, $V_t^*(I_t)$를 $(t \sim N-1)$까지 수요 충족을 위한 **최소비용**으로 정의함.
+    - 이는 생산비용 $c_t(I_t)$와 보유비용 $h_t(I_t)$, 그리고 미래의 생산비용과 보유비용을 포함하기 위함임.
+  - 마지막 재고 제약 조건 
+    - $t=N$일 때, $V_N(I_N) = \begin{cases} 0 & I_N = 0 \\ \infin & I_N >0 \end{cases}$
+    - $t<N$일 때, $V_t(I_t) = \underset{\forall x_t \text{s.t} d_t \leq I_t + x_t \leq d_t + ... + d_{N-1}}{\min} \{h_t(I_t) + c_t(x_t) + V_{t+1}(I_t + x_t - d_t)\}$
+    - $V_1(0) = 0$임.
+    - 만약 재고와 생산 수준이 연속적으로 변화한다? $\rightarrow$ 위의 식에서 $\min$ $\inf$으로 대체됨.
+    - 연속적인 아날로그를 풀더라도 재고와 생산에 대한 이산화가 필요할 수 있음.
+- Concave Cost Function (오목 비용함수)
+  - $c_t(x_t)$가 오목함수이다? $\rightarrow$ 한계비용의 감소.
+  - DP모델이 오목 생산비용과 오목 보유비용을 가지고 있을 때, solution은 아래에 주어진 간단한 형태를 가지고 있음.
+    - **[제안]** 오목한 생산-보유 비용의 경우, $I_t x_t = 0, \ \forall t = 1,..,N$에 대해 적어도 하나의 최적생산계획 $(x_1, ..., x_N)$이 존재함.
+  - 위의 제안은 생산이 기간 시작 시 재고가 0인 기간에만 발생함을 보여줌.
+    - 기간 $i$에 생산된 수량은 기간 $i$부터 $j-1$까지의 총 수요와 같아야 하며, 여기서 $j$는 $x_{i+1}=...=x_{j-1}=0$이고 $x_j >0$인 기간임.
+    - 기간 $i$에 생산된 수량을 $d_{ij} = \Sigma^{j-1}_{k=i}d_k$로 표기함.
+  - 위의 제안을 통해, DP식을 보다 더 효율적으로 수정할 수 있음.
+    - **생산비용 $c_{ij}$**는 (1) $i$시점에서의 재고가 0이고, (2) $i$시점에서 정확히 $d_{ij}$단위가 생산되며, (3) $i$시점과 $j$시점 사이 임의의 시점 $k$에서 정확히 $d_{kj}$단위의 재고가 남아 있을 때, **$i$시점부터 $j-1$까지 발생한 비용의 총 합을 의미**함.
+    - $c_{ij} = h_i(0) + c_i(d_{ij}) + \Sigma^{j-1}_{k=i+1}h_k(d_{kj})$
+  - $V^*_i$는 $I_i=0$일 때 기간 $i$부터 $N$까지의 수요를 충족하는데 드는 최소 비용임.
+  - DP 공식은 다음과 같다.
+    - 종결 조건은 $V_N = 0$임.
+    - $i<N$인 경우, $v_i = \underset{\forall j \text{s.t.} i < j \leq N}{\min} c_{ij} + V_j$
+    - 최적의 생산계획 비용은 $V_1$임.
+- Backlogging
+  - 수요는 누적이 되어 미래 시점동안 생산으로 충족될 수 있음 (백로깅 수요).
+
+- Mathematical programming 
+
+  - $\min \Sigma^{N-1}_{t=1} \{c_t(x_t) + h_t(I_t)\}, \text{s.t.} \ I_1 = I_N = 0$
+    - $I_t + x_t=d_t + I_{t+1}, \ \forall t = 1,..,N-1$
+    - $x_t \geq 0, \ \forall t = 1,.. , N-1$
+    - $I_t \geq 0, \ \forall t = 2,..,N-1$
+    - $I_t$가 음수일 때, 이는 $t$시점부터 $N$까지의 기간 동안 생산으로 충족해야 하는 백로그 수요의 $-I_t$단위 부족을 의미함.
+
+  - 백로깅이 허용되는 경우, 기간 $t$에 대한 보유/부족 비용 함수를 $h_t$라고 함.
+
+- DP 공식, final inventory constraints
+
+  - $t=N : V_N(I_N)= \begin{cases}0 & if I_N = 0 \\ \infin & \text{otherwise} \end{cases}$
+  - $t < N : V_t(I_t) = \underset{\forall x_t \text{s.t.} 0 \leq x_t \leq -I_t + d_t + .. +d_{N-1}}{\min} h_t(I_t) + c_t(x_t) + V_{t+1}(I_t + x_t - d_t)$
+
+- Backlogging with concave costs
+
+  - $h_t(y)$가 $y \in \{0,1,2,...\}$에 대해서 오목하고, $h_t(-y)$가 $y \in \{-1,-2,-3,...\}$에 대해서 오목한 경우, 오목한 보유비용과 오목한 부족비용을 갖는다고 함.
+  - **[제안 3.3]** 생산, 보유 및 부족 비용이 오목하다고 가정할 때, 아래 속성을 갖는 최적의 생산계획 $(x_1,x_2,..., x_{N-1})$가 하나 이상 존재함.
+    - 만약 $x_m >0 \and x_n >0 , (m<n)$ 이라면, $m < i \leq n$을 만족하는 적어도 하나의 $i$가 $I_i=0$를 만족함.
+
