--- a/Dynamic-Programing/03. Shortest Path Problem and Other Applications.md
+++ b/Dynamic-Programing/03. Shortest Path Problem and Other Applications.md
@@ -47,6 +47,7 @@ Directed network
     - $I_t + x_t=d_t + I_{t+1}, \ \forall t = 1,..,N-1$
     - $x_t \geq 0, \ \forall t = 1,.. , N-1$
     - $I_t \geq 0, \ \forall t = 2,..,N-1$
+    - ![image-20230919233640565](.\img\image-20230919233640565.png)
 - DP 공식 (위 내용들을 DP에 맞게 모델링하기)
   - $N-1$ 기간 동안, 시스템 운영비용은 의사결정시점시 재고 $I_t$에 따라 달라지지만, 이전 재고 및 이전 생산 수준에 따라서는 달라지지 않음.
     - 이러한 조건은 DP가 적용가능하다는 것을 의미함.
@@ -94,6 +95,8 @@ Directed network
 - Backlogging with concave costs
 
   - $h_t(y)$가 $y \in \{0,1,2,...\}$에 대해서 오목하고, $h_t(-y)$가 $y \in \{-1,-2,-3,...\}$에 대해서 오목한 경우, 오목한 보유비용과 오목한 부족비용을 갖는다고 함.
+    - ![image-20230919233714028](.\img\image-20230919233714028.png)
   - **[제안 3.3]** 생산, 보유 및 부족 비용이 오목하다고 가정할 때, 아래 속성을 갖는 최적의 생산계획 $(x_1,x_2,..., x_{N-1})$가 하나 이상 존재함.
     - 만약 $x_m >0 \and x_n >0 , (m<n)$ 이라면, $m < i \leq n$을 만족하는 적어도 하나의 $i$가 $I_i=0$를 만족함.
+    - ![image-20230919233739731](.\img\image-20230919233739731.png)
 
