--- a/Dynamic-Programing/04. Dynamic Programming and HJB Equation.md
+++ b/Dynamic-Programing/04. Dynamic Programming and HJB Equation.md
@@ -54,3 +54,7 @@ admissible control trajectory $a(t)$와 이에 대응되는 state trajectory인 
 
 - $\int^{T}_{0} (1-a(t)) s(t) dt$
 - $\text{s.t.} 0 \leq a(t) \leq 1, \ \forall t \in [0,T], \ s(0) >0$
+
+### Hamilton-Jacobi-Bellman Equation
+
+- 
